fix(*): Calculate and persist differential when score created.  Separate differential and handicap calculations.